--- a/views/ProductDetail.html
+++ b/views/ProductDetail.html
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Product</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
-<body class="body-product">
+<body>
 
 
     <header class="headerPrincipal">
 
 
-        <a href="/"> <img src="./design/icons/logo.png" alt="logo pizza"></a>
+        <a href="/"> <img src="/design/icons/logo.png" alt="logo pizza"></a>
         <h5>LA PIZZA QUE TE GUSTA</h5>
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
@@ -44,7 +44,7 @@
 
             <article class="articulo-producto">
 
-                <img src="\images\producto\pizza.png" alt="Imagen de pizza">
+                <img src="/design/product/pizza.png" alt="Imagen de pizza">
 
                 <h3>Caprese 8 Pociones</h3>
 
