--- a/public/css/productDetail.css
+++ b/public/css/productDetail.css
@@ -1,5 +1,5 @@
 @media screen and (max-width: 360px) {
-    .body-product {}
+    
 
     .main-product {}
 
@@ -48,10 +48,10 @@
     .confirmacion .botonno {
         font-family: var(--antiqua);
         border-radius: 35px;
-        padding: 7px 6px;
+        padding: 4px 5px;
         border: none;
         background-color: var(--rojo);
-        width: 202px;
+        width: 166px;
         /* display: none; */
     }
 
@@ -66,26 +66,27 @@
 
     .confirmacion .botonok {
 
-        font-family: var(--antiqua);
+font-family: var(--antiqua);
 
-        margin: 0 0px 5px 85px;
+margin: 0 0px 5px 85px;
 
-        border-radius: 35px;
+border-radius: 35px;
 
-        padding: 7px 6px;
+padding: 7px 6px;
 
-        border: none;
+border: none;
 
-        background-color: var(--verde);
+background-color: var(--verde);
 
-        font-weight: 336px;
+font-weight: 336px;
 
-        width: 202px;
-    }
+width: 166px;
+
+}
 
     .confirmacion .botonok p {
-        font-size: 18px;
-        margin: 0 0px 0px -21px;
+        font-size: 13px;
+        margin: 0 0px 0px -10px;
     }
 
     .confirmacion .botonok p i {
@@ -97,7 +98,7 @@
 @media screen and (min-width: 361px) {
 
     .main-product {
-        height: 659px;
+        /* height: 659px; */
     }
 
 
@@ -204,7 +205,7 @@
     .main-product .article .articulo-producto img {
         width: 100%;
         border-radius: 103px;
-        margin: 26px 0px 5px 0;
+        margin: 25px 0px 5px 0px;
     }
 
     .main-product .article .articulo-producto h3 {
