--- a/views/login.html
+++ b/views/login.html
@@ -19,7 +19,6 @@
             <div class="burger-menu">
                 <i class="fas fa-bars"></i>
             </div>
-
             <nav class="opcionPrincipal">
                 <ul>
                     <li class="opcion"><a href="">Inicio</a></li>
@@ -44,7 +43,7 @@
 
             <ol class="conteiner-red">
     
-                <li class="google-login"><img src="/design/icons/iconGoogle.png.png" alt=""><a href="http://www.google.com">Continuar con Google</a></li>
+                <li class="google-login"><img src="/design/iconsLogin/klipartz1.png" alt=""><a href="http://www.google.com">Continuar con Google</a></li>
                 <li class="face-login"><img src="/design/icons/face.png" alt=""><a href="http://www.facebook.com">Continuar Facebook</a></li>
                 <li class="insta-login"> <img src="/design/icons/insta.png" alt=""><a href="http://www.instagram.com">Continuar con Instagram</a></li>
                 <li class="whats-login"> <img src="/design/icons/what.png" alt=""><a href="http://www.instagram.com">Continuar con Whatsapp</a></li>
