--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,6 +19,7 @@
 @import "./general.css";
 @import "./main.css";
 @import "./footer.css";
+@import "./home.css";
 @import "./productDetail.css";
 @import "./header.css";
 @import "./cart.css";
