--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,7 +5,8 @@
         background-repeat: no-repeat;
         padding: 13%;
     }
-    .main-login form{
+
+    .main-login form {
         justify-content: center;
         align-items: center;
         /* border: solid; */
@@ -13,76 +14,89 @@
         flex-direction: column;
         background-color: var(--gri);
         border-radius: 18px;
-        }
-        .main-login form input{
+    }
+
+    .main-login form input {
         border: solid;
         border-radius: 18px;
         padding: 6px 2px;
         margin-top: 13px;
         border: none;
     }
+
     .main-login form button {
         margin: 18px auto;
         border-radius: 18px;
         background-color: var(--verde);
         box-shadow: 1px 1px 1px 1px;
     }
-        .main-login form label{}
-    
-    
+
+    .main-login form label {}
+
+
+    .main-login .conteiner-red {}
+
     .main-login .conteiner-red {
-        
-    }    
-    
-    .main-login .conteiner-red{
-    list-style: none;
-    padding: 0px;
-    display: inline-flex;
-    flex-direction: column;
+        list-style: none;
+        padding: 0px;
+        display: inline-flex;
+        flex-direction: column;
     }
-    .main-login .conteiner-red li{
-      
-    border: 0.5px black solid;
-      
-    display: inline-flex;
-      
-    border-radius: 18px;
-      
-    padding: 2px;
-      
-    margin-bottom: 9px;
-      
-    box-shadow: 1px 1px 1px 1px;
-    }    
-    .main-login .conteiner-red li img{
-     
-    width: 37px;
-     
-    height: 38px;
+
+    .main-login .conteiner-red li {
+
+        border: 0.5px black solid;
+
+        display: inline-flex;
+
+        border-radius: 18px;
+
+        padding: 2px;
+
+        margin-bottom: 9px;
+
+        box-shadow: 1px 1px 1px 1px;
     }
-    .main-login .conteiner-red li a{
-     
-    padding-top: 8px;
+
+    .main-login .conteiner-red li img {
+
+        width: 37px;
+
+        height: 38px;
     }
-    .conteiner-red .google-login{background-color: #695df8;}
-    .conteiner-red .face-login{background-color: #1877f2;}
-    .conteiner-red .insta-login{
-        
-    background-color: green;
+
+    .main-login .conteiner-red li a {
+
+        padding-top: 8px;
     }
-    .conteiner-red .whats-login{
+
+    .conteiner-red .google-login {
+        background-color: #695df8;
+    }
+
+    .conteiner-red .face-login {
+        background-color: #1877f2;
+    }
+
+    .conteiner-red .insta-login {
+
+        background-color: green;
+    }
+
+    .conteiner-red .whats-login {
         background-color: var(--gri);
-    }}
-    
-    
-        /TABLET/
-    @media screen and (min-width: 361px){
+    }
+}
+
+
+/TABLET/ @media screen and (min-width: 361px) {
     .main-login {
         background-image: url("/design/imgHome/Publicidad-para-pizzas2.jpg");
         background-size: 50% 100%;
         background-repeat: no-repeat;
     }
-    .main-login form{
+
+    .main-login form {
         justify-content: center;
         align-items: center;
         /* border: solid; */
@@ -91,68 +105,77 @@
         /* background-color: var(--gri); */
         border-radius: 18px;
         margin-left: 50%;
-        }
-        .main-login form input{
+    }
+
+    .main-login form input {
         border: solid;
         border-radius: 18px;
         padding: 6px 2px;
         margin-top: 13px;
         border: solid .3px;
     }
+
     .main-login form button {
         margin: 18px auto;
         border-radius: 18px;
         background-color: var(--verde);
         box-shadow: 1px 1px 1px 1px;
     }
-        .main-login form label{}
-    
-    
+
+    .main-login form label {}
+
+
+    .main-login .conteiner-red {}
+
     .main-login .conteiner-red {
-        
-    }    
-    
-    .main-login .conteiner-red{
-    list-style: none;
-    margin-top: 14px;
-    padding: 0px;
-    display: inline-flex;
-    flex-direction: column;
+        list-style: none;
+        margin-top: 14px;
+        padding: 0px;
+        display: inline-flex;
+        flex-direction: column;
     }
-    .main-login .conteiner-red li{
-      
-    border: 0.5px black solid;
-      
-    display: inline-flex;
-      
-    border-radius: 18px;
-      
-    padding: 2px;
-      
-    margin-bottom: 9px;
-      
-    box-shadow: 1px 1px 1px 1px;
-    }    
-    .main-login .conteiner-red li img{
-     
-    width: 37px;
-     
-    height: 38px;
+
+    .main-login .conteiner-red li {
+
+        border: 0.5px black solid;
+
+        display: inline-flex;
+
+        border-radius: 18px;
+
+        padding: 2px;
+
+        margin-bottom: 9px;
+
+        box-shadow: 1px 1px 1px 1px;
     }
-    .main-login .conteiner-red li a{
-     
-    padding-top: 8px;
+
+    .main-login .conteiner-red li img {
+
+        width: 37px;
+
+        height: 38px;
     }
-    .conteiner-red .google-login{
-    background-color: #695df8;
+
+    .main-login .conteiner-red li a {
+
+        padding-top: 8px;
     }
-    .conteiner-red .face-login{
-    background-color: #1877f2;
+
+    .conteiner-red .google-login {
+        background-color: #695df8;
     }
-    .conteiner-red .insta-login{
-        
-    background-color: green;
+
+    .conteiner-red .face-login {
+        background-color: #1877f2;
     }
-    .conteiner-red .whats-login{
+
+    .conteiner-red .insta-login {
+
+        background-color: green;
+    }
+
+    .conteiner-red .whats-login {
         background-color: var(--gri);
-    }}
+    }
+}
