--- a/views/home.html
+++ b/views/home.html
@@ -14,7 +14,7 @@
 
     <header class="headerPrincipal">
 
-        
+
         <a href="/"> <img src="./design/icons/logo.png" alt="logo pizza"></a>
         <h5>LA PIZZA QUE TE GUSTA</h5>
         <div class="burger-menu">
@@ -23,10 +23,10 @@
 
         <nav class="opcionPrincipal">
             <ul>
-                <li class="opcion" ><a href="">Inicio</a></li>
-                <li class="/cart.html" ><a href="">Menu</a></li>
-                <li class="opcion2" ><a href="">Sucursales</a></li>
-                <li class="opcion3" ><a href="">Registrate</a></li>
+                <li class="opcion"><a href="">Inicio</a></li>
+                <li class="opcion1"><a href="">Menu</a></li>
+                <li class="opcion2"><a href="">Sucursales</a></li>
+                <li class="opcion3"><a href="">Registrate</a></li>
             </ul>
         </nav>
 
@@ -36,54 +36,82 @@
 
     <main class="mainhome">
 
+
         <img src="/design/imgHome/logo-home.jpg" alt="Logo Principal Home">
+        
+        <section>
 
-  <h1>CATEGORIAS</h1>
-
-  <ul>
-    <li><a href="">Pizzas</a></li>
-    <li><a href="">Calzones</a></li>
-    <li><a href="">Faina</a></li>
-    <li><a href="">Canasta</a></li>
-    <li><a href="">Empanadas</a></li>
-    <li><a href="">Sin TACC</a></li>
-  </ul>
+            <h1>CATEGORIAS</h1>
 
 
-<img src="/design/imgHome/Pizza-aceituna.jpg" alt="Pizza aceituna">
-<img src="/design/imgHome/empanadas.jpg" alt="Empanadas">
-<img src="public/design/imgHome/qr.jpg" alt="QR">
+
+            <div class="bannerhome">
+                <ul>
+                    <li><a href="">Pizzas</a></li>
+                    <li><a href="">Calzones</a></li>
+                    <li><a href="">Faina</a></li>
+                    <li><a href="">Canasta</a></li>
+                    <li><a href="">Empanadas</a></li>
+                    <li><a href="">Sin TACC</a></li>
+                </ul>
+            </div>
 
 
-<article>
+            <img class="imagena" src="/design/imgHome/Pizza-aceituna.jpg" alt="Pizza aceituna">
 
-    <img src="/design/imgHome/calabresa.jpg" alt="Provolone">
+            <img class="imagenb" src="/design/imgHome/empanadas.jpg" alt="Empanadas">
 
-    <h3>CALABRESA</h3>
+            <img class="imagenc" src="/design/imgHome/qr.jpg" alt="QR">
 
-    <ul>
-        <li><a href="">salsa de tomate</a></li>
-        <li><a href="">muzzarella</a></li>
-        <li><a href="">longaniza</a></li>
-        <li><a href="">aji molido</a></li>
-        <li><a href="">aceitunas neegras</a></li>
-    </ul>
-</article>
+        </section>
 
-<article>
+        <article class="pizzas1">
 
-    <img src="/design/imgHome/calabresa.jpg" alt="Provolone">
+            <img class="pizzacala" src="/design/imgHome/calabresa.jpg" alt="Calabresa">
 
-    <h3>PROVOLONE Y ANANA</h3>
+            <h3>CALABREZA</h3>
 
-    <ul>
-        <li><a href="">salsa de tomate</a></li>
-        <li><a href="">muzzarella</a></li>
-        <li><a href="">longaniza</a></li>
-        <li><a href="">aji molido</a></li>
-        <li><a href="">aceitunas neegras</a></li>
-    </ul>
-</article>
+            <ul>
+                <li><a href="">salsa de tomate</a></li>
+                <li><a href="">muzzarella</a></li>
+                <li><a href="">longaniza</a></li>
+                <li><a href="">aji molido</a></li>
+                <li><a href="">aceitunas neegras</a></li>
+            </ul>
+        </article>
+
+        <article class="pizzas2">
+
+            <img class="pizzaprovo" src="/design/imgHome/PROVOLENE1.jpg" alt="Provolone">
+
+            <h3>PROVOLONE Y ANANA</h3>
+
+            <ul>
+                <li><a href="">salsa de tomate</a></li>
+                <li><a href="">muzzarella</a></li>
+                <li><a href="">longaniza</a></li>
+                <li><a href="">aji molido</a></li>
+                <li><a href="">aceitunas neegras</a></li>
+            </ul>
+
+        </article>
+
+        <article class="pizzas3">
+
+            <img src="/design/imgHome/ROQUEFORT1.jpg" alt="Roquefort">
+
+            <h3>ROQUEFORT</h3>
+
+            <ul>
+                <li><a href="">salsa de tomate</a></li>
+                <li><a href="">muzzarella</a></li>
+                <li><a href="">longaniza</a></li>
+                <li><a href="">aji molido</a></li>
+                <li><a href="">aceitunas neegras</a></li>
+            </ul>
+
+        </article>
+
 
     </main>
 
@@ -132,5 +160,3 @@
 </body>
 
 </html>
-
-
