--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -2,22 +2,15 @@
 @media screen and (max-width: 360px) {
 
     .footer {
-
-background: var(--rojo);
-
-/* height: 100vh; */
-
-justify-content: center;
-
-align-items: center;
-
-flex-direction: row;
-
-margin-bottom: -37px;
-
+background: var(--rojo);
+/* height: 100vh; */
+justify-content: center;
+align-items: center;
+flex-direction: row;
+/* margin-bottom: -37px; */
 }
 
-    .footer .info-footer {margin: 27px;}
+    .footer .info-footer {/* margin: 27px; *//* height: 103px; */}
 
     .footer .info-footer ul {}
 
@@ -47,7 +40,7 @@ margin-bottom: -37px;
     .conteiner-location {
         display: flex;
         justify-content: center;
-        padding-bottom: 22px;
+        /* padding-bottom: 22px; */
     }
 
     .conteiner-location i {
@@ -69,7 +62,7 @@ margin-bottom: -37px;
     }
 
     .conteiner-iconos {
-        padding-bottom: 11px;
+        /* padding-bottom: 11px; */
     }
 
     .conteiner-iconos a {}
