--- a/views/productCart.html
+++ b/views/productCart.html
@@ -43,7 +43,7 @@
                  <li class="list-none"><a href="">Promo del mes</a></li>
                  <li class="list-none"><a href="">Combos</a></li>
                  <li class="list-none"><a href="">Individuales</a></li>
-                 <li class="drinks" class="list-none"><a href="">Bebidas</a></li>
+                 <li class="drinks"><a href="">Bebidas</a></li>
      
                 
              </ul>
@@ -52,8 +52,10 @@
        <h2>Clásicas</h2>
        <p class="caption">Clásicas</p>
        <a class="arrow-right" href=""><i class="fa-solid fa-angle-right"></i></a>
-     <!-- PRIMER DIV -->
-     <div class="contenedor-divs">
+    <!-- CONTENEDOR DIVS -->
+     <div class="contenedor-primero">
+         <!-- PRIMER DIV -->
+        
          <div class="first-div">
          <div class="contenedor-img">
              <img src="/design/imgCarrito/image2.jpg" alt="">
@@ -64,6 +66,7 @@
      <p class="price">$5,400,0</p>
      </div>
        </div>
+     
      
        <!-- SEGUNDO-DIV -->
        <div class="second-div">
@@ -87,11 +90,18 @@
              <p class="name-pizza">Serranita 6P</p>
          <p class="description">Salsa de tomate y pimiento asado, rúcula, mozzarella, jamón serrano.</p>
          <p class="price">$5,899,0</p>
-         
-     <!-- CUARTO-DIV -->
+         </div>
+         </div>
+    
      
-         <div class="head">
-         <a href="/"> <img src="./design/logo.png" alt="logo pizza"></a>
+    </div>
+     <!-- TÍTULO DOS -->
+     <h2 class="second-h2">Pizzas del mes</h2>
+     <p class="caption-dos">Pizzas del mes</p>
+     <!-- CUARTO-DIV -->
+       <div class="contenedor-div-cuarto">  
+        <div class="head">
+         <a href="/"> <img src="./design/icons/logo.png" alt="logo pizza"></a>
      </div>
      <div class="fourth-div">
          <p class="horary">De 11:30 a 00:30 hs</p>
@@ -109,30 +119,35 @@
          <a href="">Mi cesta(0)</a>
      </div>
      </div>
-     <!-- QUINTO-DIV -->
+     <!-- CONTENEDOR-SEGUNDO-DIVS -->
+     <div class="contenedor-segundo">
+        <!-- QUINTO-DIV -->
      <div class="fifth-div">
          <div class="contenedor-img-fifth">
              <img src="/design/imgCarrito/image5.jpg" alt="">
          </div>
          <div class="contenedor-descrip-fifth">
-             <p class="name-pizza-fifth">Serranita 6P</p>
-         <p class="description-fifth">Salsa de tomate y pimiento asado, rúcula, mozzarella, jamón serrano.</p>
+             <p class="name-pizza-fifth">Ibérica Individual</p>
+         <p class="description-fifth">Huevos, aceite de oliva, parmesano, jamón ibérico</p>
          <p class="price-fifth">$5,899,0</p>
+         </div>
+     </div>
          <!-- SEXTO-DIV -->
        <div class="sixth-div">
          <div class="contenedor-img-sixth">
              <img src="/design/imgCarrito/image6.jpg" alt="">
          </div>
          <div class="contenedor-descrip-sixth">
-             <p class="name-pizza-sixth">Serranita 6P</p>
-         <p class="description-sixth">Salsa de tomate y pimiento asado, rúcula, mozzarella, jamón serrano.</p>
+             <p class="name-pizza-sixth">Fiesta Italiana 8P</p>
+         <p class="description-sixth">Cherrys, pesto de albahaca, orégano, mozzarella, aceite de oliva.</p>
          <p class="price-sixth">$5,899,0</p>
      
         
        </div>
      
      
-     </div>
+     </div></div>
+     
        <!-- ÍCONOS-DIV -->
        <div class="icons-div">
          <a href="/"><i class="fa-solid fa-right-from-bracket"></i></a>
