Se ajusta Home en Laptop

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -2,6 +2,7 @@
     --frijole: 'Frijole', sans-serif;
     --antiqua:  'Inknut Antiqua'; 
     --ingrid: 'Ingrid Darling';
+    --poppins:'Poppins', sans-serif;
     
 
     --rojo: #A60D0D;    
