--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Frijole&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Inknut Antiqua');
 @import url('https://fonts.googleapis.com/css2?family=Ingrid+Darling&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 
 
 
