--- a/views/home.html
+++ b/views/home.html
@@ -38,8 +38,8 @@
 
 
         <img src="/design/imgHome/logo-home.jpg" alt="Logo Principal Home">
-        
-        <section>
+
+        <section class="pizzasbaner">
 
             <h1>CATEGORIAS</h1>
 
@@ -65,53 +65,55 @@
 
         </section>
 
-        <article class="pizzas1">
+        <section class=pizzasinferior>
+            <article class="pizzas1">
 
-            <img class="pizzacala" src="/design/imgHome/calabresa.jpg" alt="Calabresa">
+                <img class="pizzacala" src="/design/imgHome/calabresa.jpg" alt="Calabresa">
 
-            <h3>CALABREZA</h3>
+                <h3>CALABREZA</h3>
 
-            <ul>
-                <li><a href="">salsa de tomate</a></li>
-                <li><a href="">muzzarella</a></li>
-                <li><a href="">longaniza</a></li>
-                <li><a href="">aji molido</a></li>
-                <li><a href="">aceitunas neegras</a></li>
-            </ul>
-        </article>
+                <ul>
+                    <li><a href="">salsa de tomate</a></li>
+                    <li><a href="">muzzarella</a></li>
+                    <li><a href="">longaniza</a></li>
+                    <li><a href="">aji molido</a></li>
+                    <li><a href="">aceitunas neegras</a></li>
+                </ul>
+            </article>
 
-        <article class="pizzas2">
+            <article class="pizzas2">
 
-            <img class="pizzaprovo" src="/design/imgHome/PROVOLENE1.jpg" alt="Provolone">
+                <img class="pizzaprovo" src="/design/imgHome/PROVOLENE1.jpg" alt="Provolone">
 
-            <h3>PROVOLONE Y ANANA</h3>
+                <h3>PROVOLONE Y ANANA</h3>
 
-            <ul>
-                <li><a href="">salsa de tomate</a></li>
-                <li><a href="">muzzarella</a></li>
-                <li><a href="">longaniza</a></li>
-                <li><a href="">aji molido</a></li>
-                <li><a href="">aceitunas neegras</a></li>
-            </ul>
+                <ul>
+                    <li><a href="">salsa de tomate</a></li>
+                    <li><a href="">muzzarella</a></li>
+                    <li><a href="">longaniza</a></li>
+                    <li><a href="">aji molido</a></li>
+                    <li><a href="">aceitunas neegras</a></li>
+                </ul>
 
-        </article>
+            </article>
 
-        <article class="pizzas3">
+            <article class="pizzas3">
 
-            <img src="/design/imgHome/ROQUEFORT1.jpg" alt="Roquefort">
+                <img class="pizzaroque" src="/design/imgHome/ROQUEFORT1.jpg" alt="Roquefort">
 
-            <h3>ROQUEFORT</h3>
+                <h3>ROQUEFORT</h3>
 
-            <ul>
-                <li><a href="">salsa de tomate</a></li>
-                <li><a href="">muzzarella</a></li>
-                <li><a href="">longaniza</a></li>
-                <li><a href="">aji molido</a></li>
-                <li><a href="">aceitunas neegras</a></li>
-            </ul>
+                <ul>
+                    <li><a href="">salsa de tomate</a></li>
+                    <li><a href="">muzzarella</a></li>
+                    <li><a href="">longaniza</a></li>
+                    <li><a href="">aji molido</a></li>
+                    <li><a href="">aceitunas neegras</a></li>
+                </ul>
 
-        </article>
+            </article>
 
+        </section>
 
     </main>
 
