termino de hacer el formulario de edicion del producto

--- a/views/edit-product.html
+++ b/views/edit-product.html
@@ -49,12 +49,25 @@
             <div class="edit-price">
                 <input type="text" id="price" name="precio" placeholder="Editar precio">
             </div>
-            <div class="edit-category">
-                <input type="text" id="category" name="categoria" placeholder="Editar categoria">
-            </div>
             <div class="edit-description">
                 <input type="text" id="description" name="descripcion" placeholder="Editar descripcion">
             </div>
+            <div class="edit-category">
+                <label for="category">Categoria</label>
+                <select name="category" id="category">
+                    <option value="margarita">Pizza Margarita</option>
+                    <option value="cuatro-q">Pizza Cuatro Quesos</option>
+                    <option value="peperoni">Pizza de pepperoni</option>
+                    <option value="cuatro-e">Pizza cuatro estaciones</option>
+                    <option value="chammpiñon">Pizza con champiñones</option>
+                    <option value="hawaiana">Pizza hawaiana</option>
+                    <option value="marinara">Pizza marinara</option>
+                    <option value="napolitana">Pizza napolitana</option>
+                    <option value="neoyorquina">Pizza neoyorquina</option>
+                    <option value="fugazza">Pizza fugazza </option>
+                </select>
+            </div>
+           
             <div class="edit-image">
                 <label class="label-titulo" for="image">Editar imagen del producto</label>
                 <br>
