--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -12,6 +12,8 @@
     align-items: center;
     background-color: var(--gri);
     position: relative;
+    border-radius: 10px;
+    box-shadow: 0px 0px 8px black;
 }
 
 .form-edit div {
@@ -35,6 +37,7 @@
 /*titulo*/
 .form-edit .titulo {
     margin: 8px;
+    color: var(--gris);
     border-bottom: solid;
 }
 
@@ -57,8 +60,12 @@
 
 .form-edit .edit-category {}
 
-.edit-category input {
+.edit-category label {
+    color: var(--gris);
 }
+.edit-category option {
+}
+
 
 
 
@@ -73,7 +80,9 @@
     /* background-color: var(--azul); */
 }
 
-.form-edit .edit-image label {}
+.form-edit .edit-image label {
+    color: var(--gris);
+}
 
 .form-edit .edit-image input {
     width: 71%;
@@ -118,12 +127,14 @@
         align-items: center;
         background-color: var(--gri);
         position: relative;
+        /* flex-wrap: wrap; */
+        box-shadow: 0px 0px 8px black;
     }
     
     .form-edit div {
         text-align: center;
         margin: 9px;
-        width: 80%;
+        width: 60%;
         /* border-bottom: var(--grisBoton) solid; */
     }
     .form-edit div input{
@@ -147,6 +158,7 @@
     .form-edit .titulo {
         margin: 8px;
         border-bottom: solid;
+        color: var(--gris);
     }
     
     
@@ -166,10 +178,18 @@
     
     /*category*/
     
-    .form-edit .edit-category {}
+    .form-edit .edit-category {
+    width: 32%;
+    position: absolute;
+    bottom: 15%;
+    right: 48%;
+}
     
-    .edit-category input {
-    }
+.edit-category label {
+    color: var(--gris);
+}
+.edit-category option {
+}
     
     
     
@@ -182,12 +202,17 @@
     /*imagen*/
     .form-edit .edit-image {
         /* background-color: var(--azul); */
+        width: 38%;
+        position: relative;
+        left: 20%;
     }
     
-    .form-edit .edit-image label {}
+    .form-edit .edit-image label {
+    color: var(--gris);
+}
     
     .form-edit .edit-image input {
-        width: 71%;
+        width: 161px;
         background-color: var(--gri);
     }
     
