--- a/views/edit-product.ejs
+++ b/views/edit-product.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- <%includes('./partials/head')%> -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +12,7 @@
 
 <body>
 
-
+<!-- <%include('./partials/header')%> -->
     <header class="headerPrincipal">
 
 
@@ -55,6 +56,7 @@
             <div class="edit-category">
                 <label for="category">Categoria</label>
                 <select name="category" id="category">
+                 <!-- <option value=""><%for  %></option> -->
                     <option value="margarita">Pizza Margarita</option>
                     <option value="cuatro-q">Pizza Cuatro Quesos</option>
                     <option value="peperoni">Pizza de pepperoni</option>
@@ -79,7 +81,7 @@
         </form>
 
     </main>
-
+<!-- <%-include('./partials/footer)%> -->
     <footer class="footer">
 
         <nav class="info-footer">
@@ -124,4 +126,4 @@
 </body>
 
 
-</html>
+</html>  
