agrego el sistema de ruteo

--- a/views/edit-product.ejs
+++ b/views/edit-product.ejs
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/styles.css">
-    <title>Edicion del producto</title>
+    <%-include("./partials/head")%>
 </head>
 <body>
 
-    <%-includes("./partials/header")%>
+    <%-include("./partials/header")%>
     <main class="main-form">
 
         <form class="form-edit">
@@ -54,7 +51,7 @@
         </form>
 
     </main>
-    <%-includes("./partials/footer")%>
+    <%-include("./partials/footer")%>
     
 </body>
 </html>
