--- a/public/css/edit-product.css
+++ b/public/css/edit-product.css
@@ -34,8 +34,207 @@
 }
  .conteiner-x-edit i{
  color: black;}
-/titulo/
+/*titulo*/
 .form-edit .titulo {
     margin: 8px;
     color: var(--gris);
- …
+    border-bottom: solid;
+}
+
+
+
+
+.form-edit .edit-title {}
+
+
+
+/*precio*/
+
+.form-edit .edit-price {}
+
+.form-edit .edit-price input {}
+
+
+
+/*category*/
+
+.form-edit .edit-category {}
+
+.edit-category label {
+    color: var(--gris);
+}
+.edit-category option {
+}
+
+
+
+
+/*descripcion*/
+
+.form-edit .edit-description {}
+
+ .edit-description input {}
+
+/*imagen*/
+.form-edit .edit-image {
+    /* background-color: var(--azul); */
+}
+
+.form-edit .edit-image label {
+    color: var(--gris);
+}
+
+.form-edit .edit-image input {
+    width: 71%;
+    background-color: var(--gri);
+}
+
+
+
+
+
+
+
+/*boton*/
+
+
+.form-edit .button {
+}
+
+.form-edit .button button {
+    background-color: var(--verde);
+    border-radius: 9px;
+    border: none;
+    transition: 0.1s;
+}
+
+
+
+/*dispositivos superiores*/
+
+@media  (min-width: 361px){
+    .main-form {
+        background-color: var(--gris);
+        padding: 12%;
+    }
+
+    .main-form form {}
+
+    .main-form .form-edit {
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: var(--gri);
+        position: relative;
+        /* flex-wrap: wrap; */
+        box-shadow: 0px 0px 8px black;
+    }
+
+    .form-edit div {
+        text-align: center;
+        margin: 9px;
+        width: 60%;
+        /* border-bottom: var(--grisBoton) solid; */
+    }
+    .form-edit div input{
+        border-radius: 6px;
+        width: 102%;
+        padding: 4px;
+        background-color: var(--gris);
+    }
+    .form-edit .conteiner-x-edit{
+        right: 0px;
+        display: inline-block;
+        position: absolute;
+        top: 0px;
+    }
+     .conteiner-x-edit i{
+     color: black;
+     position: relative;
+     left: 47%;
+     }
+    /*titulo*/
+    .form-edit .titulo {
+        margin: 8px;
+        border-bottom: solid;
+        color: var(--gris);
+    }
+
+
+
+
+    .form-edit .edit-title {}
+
+
+
+    /*precio*/
+
+    .form-edit .edit-price {}
+
+    .form-edit .edit-price input {}
+
+
+
+    /*category*/
+
+    .form-edit .edit-category {
+    width: 32%;
+    position: absolute;
+    bottom: 15%;
+    right: 48%;
+}
+
+.edit-category label {
+    color: var(--gris);
+}
+.edit-category option {
+}
+
+
+
+    /*descripcion*/
+
+    .form-edit .edit-description {}
+
+     .edit-description input {}
+
+    /*imagen*/
+    .form-edit .edit-image {
+        /* background-color: var(--azul); */
+        width: 38%;
+        position: relative;
+        left: 20%;
+    }
+
+    .form-edit .edit-image label {
+    color: var(--gris);
+}
+
+    .form-edit .edit-image input {
+        width: 161px;
+        background-color: var(--gri);
+    }
+
+
+
+
+
+
+
+    /*boton*/
+
+
+    .form-edit .button {
+    }
+
+    .form-edit .button button {
+        background-color: var(--verde);
+        border-radius: 9px;
+        border: none;
+        transition: 0.1s;
+    }
+    .form-edit .button button:hover{
+        box-shadow:0px 0px 8px rgb(18, 16, 16) ; 
+    }
+}
